syntax = "proto3";

package account;

service Account {
    rpc Register(RegisterReq) returns (RegisterResp) {}
    rpc Login(LoginReq) returns (LoginResp) {}
}

message RegisterReq {
    string account = 1;
    string password = 2;
}

message RegisterResp {
    string message = 1;
    int32 ueser_id = 2;
}

message LoginReq {
    string account = 1;
    string password = 2;
}

message LoginResp {
    string message = 1;
}